--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -73,7 +75,7 @@
                 <div class="card pic1 border-0">
                     <img src="/assets/images/1.jfif" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text fs-6">Lorem ipsum dolor sit amet.</p>
+                        <p class="card-text fs-5">Lorem ipsum dolor sit amet.</p>
                         <p class="card-text fs-4 text-danger"><i class="fa-regular fa-dollar-sign"></i>159.86</p>
                         <a href="#" class="btn btn-primary bg-secondary border-0 rounded-0">Go somewhere</a>
                     </div>
@@ -184,7 +186,7 @@
                 </div>
             </div>
             <div class="bg-dark text-white m2">
-                <p class="p-3">Powered By OpenCart 2013</p>
+                <p class="p-2">Powered By OpenCart 2013</p>
             </div>
         </footer>    
 
